--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ http {
     keepalive_timeout  65;
 
     server {
-        listen 80;
+        listen 8080;
         server_name localhost;
 
         root /var/www/public;
@@ -23,10 +23,11 @@ http {
         }
 
         location ~ \.php$ {
-            fastcgi_pass unix:/run/php/php8.1-fpm.sock;
+            fastcgi_pass 127.0.0.1:9000;
             fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include fastcgi_params;
         }
     }
+
 }
