--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build:
@@ -13,6 +11,8 @@ services:
       - ./storage:/var/www/storage
     ports:
       - "8080:80"
+    depends_on:
+      - db
     networks:
       - laravel
 
@@ -28,13 +28,6 @@ services:
       MYSQL_ROOT_PASSWORD: secret
     volumes:
       - dbdata:/var/lib/mysql
-      - ./import_db.sh:/docker-entrypoint-initdb.d/import_db.sh
       - ./quizz.sql:/docker-entrypoint-initdb.d/quizz.sql
     networks:
       - laravel
-
-networks:
-  laravel:
-
-volumes:
-  dbdata:
