--- a/nginx.conf
+++ b/nginx.conf
@@ -11,20 +11,20 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
-    server {
-        listen 8080;
+   server {
+        listen ${PORT:-8080};
         server_name localhost;
 
         root /var/www/public;
-        index index.php index.html;
+        index index.php;
 
         location / {
             try_files $uri $uri/ /index.php?$query_string;
         }
 
         location ~ \.php$ {
-            fastcgi_pass 127.0.0.1:9000;
-            fastcgi_index index.php;
+            include snippets/fastcgi-php.conf;
+            fastcgi_pass unix:/run/php/php7.4-fpm.sock;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include fastcgi_params;
         }
